# mh-crafting-planner

./: .env.example  .gitignore  README.md  docker-compose.supabase.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  start.sh
backend/data/csv/transaction/: purchasing_plan.csv  shipment_plan.csv
backend/data/datasets/: 20250202-1.yml
backend/notebooks/: connect_supabase.ipynb  fetch_supabase.ipynb
backend/src/: const.py  main.py
backend/src/api/routers/: recipe_router.py  shipment_plan_router.py
backend/src/base/domain/: entities.py
backend/src/base/types/: __init__.py  ingredient.py  unit.py
backend/src/core/: __init__.py
backend/src/core/controllers/: base.py
backend/src/core/domain/: base_repository.py  entities.py  models.py
backend/src/core/models/: __init__.py  master.py  transaction.py
backend/src/core/supabase/: __init__.py  client.py  repositories.py  tables.py
backend/src/db/local/: csv_interface.py  csv_loader.py  csv_models.py  model_transform.py
backend/src/master/domain/: entities.py
backend/src/models/: __init__.py  base.py  entities.py  item.py  master.py  mixer.py  procurement_plan.py  purchasing_plan.py  recipe.py  shipment_plan.py  transaction.py
backend/src/models/entities/: __init__.py  base.py  item.py  mixer.py  procurement_plan.py  purchasing_plan.py  (+2 more)
backend/src/routers/: item_router.py  mixer_router.py  procurement_plan_router.py
backend/src/types/: __init__.py  unit.py
backend/tests/: test_backend.py  test_read_csv.py  test_supabase.py
backend/tools/: code_to_text.py
(+54 files in other folders)
