[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["nodashin <nodashin.jpn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12.4"
numpy = "^2.2.1"
fastapi = "^0.115.6"
sqlmodel = "^0.0.22"
uvicorn = "^0.34.0"
pandas = "^2.2.3"
scipy = "^1.14.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
pydantic = "^2.10.4"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"